cmake_minimum_required(VERSION 2.8)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(/usr/include/glib-2.0 /usr/local/include/glib-2.0)
include_directories(/usr/lib/glib-2.0/include /usr/local/lib/glib-2.0/include)
add_library(serverlog ${HANDLERS_MODE} src/init.c src/gamestate.c src/login.c src/track.c src/transaction.c src/inventory.c src/action.c src/chat.c src/settings.c)
target_link_libraries(serverlog mcproxyapi m pthread glib-2.0)
